# alife_definitions

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  action-plan.md  digital-life-project-overview.md  pyproject.toml
configs/: README.md
crates/alife-defs-cli/: Cargo.toml
docs/: README.md  artifact_publication_policy.md  data-contract.md  submission_guide.md
experiments/: coupling_analysis.json  final_graph_statistics.json
paper/: Makefile  main.tex  references.bib
scripts/: analyze_agreement.py  analyze_auc_bonferroni.py  analyze_bootstrap_ci.py  analyze_coupling.py  analyze_failure_pathways.py  analyze_invariance.py  analyze_loro.py  analyze_midrun.py  analyze_phenotype.py  analyze_predictive.py  analyze_robustness_table.py  analyze_sensitivity.py  analyze_surrogate_fpr.py  analyze_te_robustness.py  analyze_temporal_d3.py  check_manuscript_consistency.py  experiment_1000step.py  experiment_benchmark.py  experiment_benchmark_single.py  experiment_common.py  experiment_cyclic.py  experiment_cyclic_sweep.py  experiment_ecology_stress.py  experiment_evolution.py  experiment_final.py  experiment_final_graph.py  experiment_graded.py  experiment_graph_calibration.py  experiment_invariance.py  experiment_manifest.py  experiment_midrun_ablation.py  experiment_niche.py  experiment_pairwise.py  experiment_proxy.py  experiment_regimes.py  experiment_sham.py  experiment_spatial.py  experiment_trait_evolution.py  figure_agreement.py  generate_figures.py  (+6 more)
tests_python/: conftest.py  test_adapter_d1.py  (+15 more)
(+53 files in other folders)
