[package]
name = "alife-defs-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "alife-defs"
path = "src/main.rs"

[dependencies]
alife-defs-core = { path = "../alife-defs-core" }
rand.workspace = true
rand_chacha.workspace = true
clap = { version = "4.4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
anyhow = "1.0"
